<resources>
    <string name="app_name">Burger King</string>
    <string name="order_burgers">Order Burgers</string>
    <string name="one_burger">One Burger</string>
    <string name="six_burgers">Six Burgers</string>
    <string name="twelve_burgers">Twelve Burgers</string>
    <string name="types_of_burgers">Types of Burgers</string>
    <string name="beef_burgers">Beef Burgers</string>
    <string name="veggie_burgers">Veggie Burgers</string>
    <string name="bison_burgers">Bison Burgers</string>
    <string name="black_bean_burgers">Black Bean Burgers</string>
    <string name="elk_burgers">Elk Burgers</string>
    <string name="special_type">Special Type</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_burger_order">New Burger Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="burgers">
        <item quantity="one">%d burger</item>
        <item quantity="other">%d burgers</item>
    </plurals>
</resources>