<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for selecting a flavor -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_background"
    tools:context=".FlavorFragment">

    <data>
        <variable
            name="viewModel"
            type="dev.refa.burgerking.model.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="dev.refa.burgerking.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/flavor_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/beef_burgers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/beef_burgers)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/beef_burgers)}"
                    android:text="@string/beef_burgers" />

                <RadioButton
                    android:id="@+id/veggie_burgers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/veggie_burgers)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/veggie_burgers)}"
                    android:text="@string/veggie_burgers" />

                <RadioButton
                    android:id="@+id/bison_burgers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/bison_burgers)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/bison_burgers)}"
                    android:text="@string/bison_burgers" />

                <RadioButton
                    android:id="@+id/black_bean_burgers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/black_bean_burgers)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/black_bean_burgers)}"
                    android:text="@string/black_bean_burgers" />

                <RadioButton
                    android:id="@+id/elk_burgers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/elk_burgers)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/elk_burgers)}"
                    android:text="@string/elk_burgers" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.BurgerKing.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flavor_options" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.BurgerKing.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:onClick="@{() -> flavorFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>